[workspace]
resolver = "3"
members = ["src/*"]
default-members = ["src/bridge", "src/core"]

[workspace.package]
edition = "2024"
version = "1.0.0"

[workspace.dependencies]
android_logger = "0.15"
anyhow = "1"
async-trait = "0.1"
aya = { git = "https://github.com/aya-rs/aya" }
aya-build = { git = "https://github.com/aya-rs/aya" }
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
bytemuck = "1.24"
clap = { version = "4.6", features = ["derive"] }
cpp_demangle = "0.5"
daemonize = "0.5"
dynasmrt = "5.0"
env_logger = "0.11"
futures = "0.3"
glob = "0.3"
jni = "0.22"
log = "0.4"
memfd = "0.6"
nix = { version = "0.31" }
notify = "9.0.0-rc.2"
parking_lot = "0.12"
once_cell = "1.21"
once_map = "0.4"
procfs = "0.18"
prost = "0.14"
prost-build = "0.14"
r3solvr = { git = "https://github.com/Mufanc/r3solvr" }
regex-lite = "0.1"
scopeguard = "1.2"
serde = { version = "1.0", features = ["derive"] }
strum = "0.28"
strum_macros = "0.28"
syscalls = { version = "0.8" }
tokio = { version = "1", features = ["full"] }
toml = "1.0.7+spec-1.1.0"
uds = "0.4.2"
which = "8.0"
wincode = { version = "0.4" }

[workspace.lints.clippy]
unused_async = "warn"
uninlined_format_args = "warn"

[profile.release]
lto = true
opt-level = "s"
strip = true
split-debuginfo = "packed"
debug = "line-tables-only"

[profile.release.package.zynx-core]
codegen-units = 1

[profile.release.package.zynx-bridge]
codegen-units = 1

[profile.release.package.zynx-ebpf]
codegen-units = 1
opt-level = 0
strip = false
split-debuginfo = "off"
debug = false
